# AEPnP

./: README.md  demo.py  requirements.txt  utils.py
solver/: CMakeLists.txt  setup.py
solver/src/: AnisotropicEpnp.cpp  AnisotropicEpnp.hpp  aepnp.cpp  aepnp.hpp  anisotropicPnP.cpp  anisotropicPnP.hpp  apnp.cpp  apnp.hpp
